Feature Request #49 : Custom Endpoint with S3-Based Uploading
- Wasabi Hot Cloud Storage has been converted to being a dynamic S3-based upload controller.

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -230,12 +230,16 @@
    "User Not Found": "User Not Found",
    "Save Links to Database": "Save Links to Database",
    "Upload File": "Upload File",
+   "Endpoint": "Endpoint",
+   "Endpoint Address": "Endpoint Address",
+   "Custom Endpoint": "Custom Endpoint",
    "Bucket": "Bucket",
    "Region": "Region",
    "Use Global Amazon S3 Video Storage": "Use Global Amazon S3 Video Storage",
    "Use Global Wasabi Hot Cloud Storage Video Storage": "Use Global Wasabi Hot Cloud Storage Video Storage",
    "Use Global Backblaze B2 Video Storage": "Use Global Backblaze B2 Video Storage",
    "Use Global WebDAV Video Storage": "Use Global WebDAV Video Storage",
+   "S3-Based Network Storage": "S3-Based Network Storage",
    "Amazon S3 Upload Error": "Amazon S3 Upload Error",
    "Wasabi Hot Cloud Storage Upload Error": "Wasabi Hot Cloud Storage Upload Error",
    "accountId": "Account ID",
