Rewrite Settings and Montior Edit forms in JSON instead of HTML
- rewrite of forms in JSON allow auto-generating the necessary fields on almost any template with a lot more ease
- remove ejs files for uploaders and make fields generate by JSON as well
+ activate separated css files

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -26,6 +26,7 @@
    "Montage": "Montage",
    "Accounts": "Accounts",
    "Settings": "Settings",
+   "Cards": "Cards",
    "Recording FPS": "Recording FPS",
    "Input Selector": "Input Selector",
    "Input Settings": "Input Settings",
@@ -211,7 +212,7 @@
    "blankPassword": "Leave blank to keep same password",
    "2-Factor Authentication": "2-Factor Authentication",
    "Use Max Storage Amount": "Use Max Storage Amount",
-   "Max Storage Amount": "Max Storage Amount <small>in Megabytes</small>",
+   "Max Storage Amount": "Max Storage Amount",
    "Number of Days to keep": "Number of Days to keep",
    "Monitor Groups": "Monitor Groups",
    "Group Name": "Group Name",
@@ -229,6 +230,7 @@
    "Database Not Found": "Database Not Found",
    "User Not Found": "User Not Found",
    "Save Links to Database": "Save Links to Database",
+   "Uploaders": "Uploaders",
    "Upload File": "Upload File",
    "Endpoint": "Endpoint",
    "Endpoint Address": "Endpoint Address",
@@ -267,6 +269,8 @@
    "Currently viewing": "Currently viewing",
    "Status Indicator": "Status Indicator",
    "Show Logs": "Show Logs",
+   "Time Occurred": "Time Occurred",
+   "Recent Videos": "Recent Videos",
    "Videos List": "Videos List",
    "Monitor Settings": "Monitor Settings",
    "Enlarge": "Enlarge",
@@ -275,6 +279,7 @@
    "Idle": "Idle",
    "Disabled": "Disabled",
    "Record": "Record",
+   "Watch-Only": "Watch-Only",
    "Watch Only": "Watch Only",
    "Toggle Sidebar": "Toggle Sidebar",
    "Add Monitor": "Add Monitor",
@@ -356,7 +361,7 @@
    "Stream": "Stream",
    "Stream Timestamp": "Stream Timestamp",
    "Stream Watermark": "Stream Watermark",
-   "JPEG API": "JPEG API <small>Snapshot (cgi-bin)</small>",
+   "JPEG API": "JPEG API",
    "Raw H.264 Stream": "Raw H.264 Stream",
    "Recording": "Recording",
    "Recording Timestamp": "Recording Timestamp",
@@ -378,7 +383,7 @@
    "Refresh List of Cascades": "Refresh List of Cascades",
    "\"No Motion\" Detector": "\"No Motion\" Detector",
    "Control": "Control",
-   "Grouping": "Grouping <small>Add groups in <b>Settings</b></small>",
+   "Grouping": "Grouping",
    "Detector Grouping": "Detector Grouping <small>Add groups in <b>Settings</b></small>",
    "Detector Recording Process Exited Prematurely. Restarting.": "Detector Recording Process Exited Prematurely. Restarting.",
    "Detector Recording Complete": "Detector Recording Complete",
@@ -386,6 +391,7 @@
    "Logging": "Logging",
    "IdentityText1": "This is how the system will identify the data for this stream. You cannot change the <b>Monitor ID</b> once you have pressed save. If you want you can make the <b>Monitor ID</b> more human readable before you continue.",
    "IdentityText2": "You can duplicate a monitor by modifying the <b>Monitor ID</b> then pressing save. You <b>cannot</b> use the ID of a monitor that already exists or it will save over that monitor's database information.",
+   "opencvCascadesText": "If you see nothing here then just download this package of <a href=\"https://cdn.shinobi.video/weights/cascades.zip\">cascades</a>. Drop them into <code>plugins/opencv/cascades</code> then press refresh <i class=\"fa fa-retweet\"></i>.",
    "noSpecialCharacters": "No spaces or special characters.",
    "NotesPlacholder": "Comments you want to leave for this cameras settings.",
    "InputText1": "This section tells Shinobi how to consume a stream. For optimal performance try tuning your camera's internal settings. Find the following options and set them as shown. To find your camera you can use the <b>built in ONVIF Scanner</b> of Shinobi. Some ONVIF cameras require the use of a management tool to modify their internal settings. If you can't find your cameras you can try <a href=\"https://s3.amazonaws.com/cloudcamio/odm-v2.2.250.msi\">ONVIF Device Manager for Windows</a>.",
@@ -437,7 +443,7 @@
    "Position Y": "Position Y",
    "Image Location": "Image Location <small>Absolute Path or leave blank to use global</small>",
    "Image Position": "Image Position",
-   "Frame Rate": "Frame Rate <small>(FPS)</small>",
+   "Frame Rate": "Frame Rate",
    "Image Width": "Image Width",
    "Image Height": "Image Height",
    "Record File Type": "Record File Type",
@@ -787,6 +793,10 @@
    "hevc_cuvid": "H.265 CUVID",
    "mjpeg_cuvid": "MJPEG CUVID",
    "mpeg4_cuvid": "MPEG4 CUVID",
+   "NVIDIA": "NVIDIA",
+   "VA-API": "VA-API",
+   "Raspberry Pi": "Raspberry Pi",
+   "Quick Sync Video": "Quick Sync Video",
    "h264_qsv": "H.264 (Quick Sync Video)",
    "hevc_qsv": "H.265 (Quick Sync Video)",
    "vp8_qsv": "VP8 (Quick Sync Video)",
@@ -868,6 +878,7 @@
    "Edit Selected":"Edit Selected",
    "Copy Settings":"Copy Settings",
    "Copy to Settings":"Copy to Settings",
+   "Copy Mode":"Copy Mode",
    "Copy Group Settings":"Copy Group Settings",
    "Copy Connection Settings":"Copy Connection Settings",
    "Copy Custom Settings":"Copy Custom Settings",
