Add JPEG-based Timelapse creation
- Currently can only retrieve data about Timelapse through API, GUI coming soon
+ Definition fixes

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -389,6 +389,9 @@
    "Detector Recording Complete": "Detector Recording Complete",
    "Clear Recorder Process": "Clear Recorder Process",
    "Logging": "Logging",
+   "Timelapse": "Timelapse",
+   "Creation Interval": "Creation Interval",
+   "Plugin": "Plugin",
    "IdentityText1": "This is how the system will identify the data for this stream. You cannot change the <b>Monitor ID</b> once you have pressed save. If you want you can make the <b>Monitor ID</b> more human readable before you continue.",
    "IdentityText2": "You can duplicate a monitor by modifying the <b>Monitor ID</b> then pressing save. You <b>cannot</b> use the ID of a monitor that already exists or it will save over that monitor's database information.",
    "opencvCascadesText": "If you see nothing here then just download this package of <a href=\"https://cdn.shinobi.video/weights/cascades.zip\">cascades</a>. Drop them into <code>plugins/opencv/cascades</code> then press refresh <i class=\"fa fa-retweet\"></i>.",
