Some Updates and Fixes
- Add Branding Engine
- Lock PM2 install to 3.0.0 (newer versions cannot catch `uncaughtException`.
- Update macOS installer
- Update OpenALPR (CPU) installer
- Add Portuguese Language
- Fix Language Selector
- Lay-In ability to create Matrix from Pam-Diff detection blob
- createEventBasedRecording called for Traditional Recording labelled 5 seconds before real time to capture event
- fix NaN for new user created in Superuser
- count space used for Timelapse Frames and Files tables (does not purge Timelapse data yet)
- Update TimelapseJpeg, lay-in MP4 builder, many fixes, additonal page
- add `impervious` to gitignore in `web/libs` for custom static files
- Fix delete button for quick video list
- Fix Super form appearance

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -77,6 +77,7 @@
    "Zoom Out": "Zoom Out <small>URL Address</small>",
    "Enable Nightvision": "Enable Nightvision",
    "Disable Nightvision": "Disable Nightvision",
+   "Date": "Date",
    "Current": "Current",
    "Monitors": "Monitors",
    "Video": "Video",
@@ -93,6 +94,8 @@
    "New Monitor": "New Monitor",
    "Please Check Your Settings": "Please Check Your Settings",
    "migrateText1": "<b>Input Type</b> could not be parsed. Please set it manually.",
+   "Building": "Building",
+   "Started Building": "Started Building",
    "Add": "Add",
    "Save": "Save",
    "Close": "Close",
@@ -391,6 +394,7 @@
    "Logging": "Logging",
    "Timelapse": "Timelapse",
    "Nothing exists": "Nothing exists",
+   "Already exists": "Already exists",
    "Creation Interval": "Creation Interval",
    "Plugin": "Plugin",
    "IdentityText1": "This is how the system will identify the data for this stream. You cannot change the <b>Monitor ID</b> once you have pressed save. If you want you can make the <b>Monitor ID</b> more human readable before you continue.",
