Packging, addStorage Max Amounts, Fix s3uploader and minor fixes
- Add ability to pacakge with `pkg`
- Add Max Storage Amount for each `addStorage` storage array per user
- Fix `uploaders/s3based.js` variable names
- Update Timelapse.jpeg video builder
- Allow rendering a separate page upon login for Sub-Accounts

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -94,6 +94,7 @@
    "New Monitor": "New Monitor",
    "Please Check Your Settings": "Please Check Your Settings",
    "migrateText1": "<b>Input Type</b> could not be parsed. Please set it manually.",
+   "Build": "Build",
    "Building": "Building",
    "Started Building": "Started Building",
    "Add": "Add",
@@ -211,6 +212,7 @@
    "Region Name": "Region Name",
    "Regions": "Regions",
    "Again": "Again",
+   "Landing Page": "Landing Page",
    "Account Info": "Account Info",
    "blankPassword": "Leave blank to keep same password",
    "2-Factor Authentication": "2-Factor Authentication",
