clear "over max" timelapse frames

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -17,6 +17,8 @@
    "Password": "Password",
    "Password Again": "Password Again",
    "Remember Me": "Remember Me",
+   "Process Already Running": "Process Already Running",
+   "Process Not Running": "Process Not Running",
    "RAM": "RAM",
    "CPU": "CPU",
    "on": "on",
@@ -234,6 +236,7 @@
    "Database": "Database",
    "Database Not Found": "Database Not Found",
    "User Not Found": "User Not Found",
+   "Not Found": "Not Found",
    "Save Links to Database": "Save Links to Database",
    "Uploaders": "Uploaders",
    "Upload File": "Upload File",
@@ -864,7 +867,10 @@
    "Confidence":"Confidence",
    "Trainer Engine":"Trainer Engine",
    "Train":"Train",
-   "TrainConfirm":"Are you sure you want to begin training? This can take more than 12 hours with over 500 images. This will consume a large amount of resources, like RAM or CPU.",
+   "openImagesDownloadConfirm":"Are you sure you want to begin download images and bounding boxes (preset Matrices) from OpenImages?",
+   "openImagesDownloadConfirmStop":"Are you sure you want to stop training?",
+   "TrainConfirm":"Are you sure you want to begin training? This can take more than 12 hours with over 500 images. This will consume a large amount of resources, like RAM and/or CPU.",
+   "TrainConfirmStop":"Are you sure you want to stop training?",
    "Batch":"Batch",
    "Subdivision":"Subdivision",
    "Map":"Map",
