--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -220,6 +220,8 @@
    "2-Factor Authentication": "2-Factor Authentication",
    "Use Max Storage Amount": "Use Max Storage Amount",
    "Max Storage Amount": "Max Storage Amount",
+   "Video Share": "Video Share",
+   "Timelapse Frames Share": "Timelapse Frames Share",
    "Number of Days to keep": "Number of Days to keep",
    "Monitor Groups": "Monitor Groups",
    "Group Name": "Group Name",
