--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -29,6 +29,7 @@
    "Accounts": "Accounts",
    "Settings": "Settings",
    "Cards": "Cards",
+   "No Region": "No Region",
    "Recording FPS": "Recording FPS",
    "Input Selector": "Input Selector",
    "Input Settings": "Input Settings",
