Update HTTP Motion Trigger
- Make it a JSON response
- Add ability to Block it with a switch

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -35,6 +35,11 @@
    "Input Settings": "Input Settings",
    "Connection": "Connection",
    "Video Set": "Video Set",
+   "Allow API Trigger": "Allow API Trigger",
+   "When Detector is Off": "When Detector is Off",
+   "When Detector is On": "When Detector is On",
+   "Always": "Always",
+   "Never": "Never",
    "API": "API",
    "ONVIF": "ONVIF",
    "FFprobe": "Probe",
@@ -378,6 +383,7 @@
    "Recording": "Recording",
    "Recording Timestamp": "Recording Timestamp",
    "Recording Watermark": "Recording Watermark",
+   "Timelapse Watermark": "Timelapse Watermark",
    "Region Editor": "Region Editor",
    "Detector Filters": "Detector Filters",
    "Filter for Objects only": "Filter for Objects only",
@@ -723,6 +729,7 @@
    "No Group with this key exists": "No Group with this key exists",
    "Success": "Success",
    "Trigger Successful": "Trigger Successful",
+   "Trigger Blocked": "Trigger Blocked",
    "No such file": "No such file",
    "h265BrowserText1": "If you are trying to play an H.265 file, you may need to download it and open it in another application like VLC.",
    "modifyVideoText1": "Method doesn't exist. Check to make sure that the last value of the URL is not blank.",
