Update Scheduling Manager
- Add selection for Days of the week
- Add Timezone selector
- cleanup schedule.js

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -38,6 +38,14 @@
    "Allow API Trigger": "Allow API Trigger",
    "When Detector is Off": "When Detector is Off",
    "When Detector is On": "When Detector is On",
+   "Sunday": "Sunday",
+   "Monday": "Monday",
+   "Tuesday": "Tuesday",
+   "Wednesday": "Wednesday",
+   "Thursday": "Thursday",
+   "Friday": "Friday",
+   "Saturday": "Saturday",
+   "Today": "Today",
    "Always": "Always",
    "Never": "Never",
    "API": "API",
@@ -368,6 +376,7 @@
    "hours": "hours",
    "a day": "a day",
    "days": "days",
+   "Days": "Days",
    "a month": "a month",
    "months": "months",
    "a year": "a year",
@@ -375,6 +384,8 @@
    "Identity": "Identity",
    "Input": "Input",
    "Input Feed": "Input Feed",
+   "Timezone": "Timezone",
+   "Timezone Offset": "Timezone Offset",
    "Stream": "Stream",
    "Stream Timestamp": "Stream Timestamp",
    "Stream Watermark": "Stream Watermark",
