Add FileBin Space Calculator
+ make timelapse range queries have time as well

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -235,6 +235,7 @@
    "Use Max Storage Amount": "Use Max Storage Amount",
    "Max Storage Amount": "Max Storage Amount",
    "Video Share": "Video Share",
+   "FileBin Share": "FileBin Share",
    "Timelapse Frames Share": "Timelapse Frames Share",
    "Number of Days to keep": "Number of Days to keep",
    "Monitor Groups": "Monitor Groups",
