--- a/languages/sv_SE.json
+++ b/languages/sv_SE.json
@@ -19,10 +19,10 @@
   "Account Info": "Konto Info",
   "AccountEditText1": "Kunde inte redigera. Uppdatera sidan om problemet fortsätter.",
   "Accounts": "Konton",
-  "Action for Selected": "Åtgärder för Utvalda",
+  "Action for Selected": "Åtgärder för valda",
   "Add": "Lägg till",
-  "Add Channel": "Lägg Till Kanalen",
-  "Add Input Feed": "Lägga In Foder",
+  "Add Channel": "Lägg Till Kanal",
+  "Add Input Feed": "Lägga till Inmatningsflöde",
   "Add Map": "Lägg Till Karta",
   "Add Monitor": "Lägg Till Monitor",
   "Add New": "Lägg Till Ny",
@@ -37,9 +37,9 @@
   "All Monitors and Privileges": "Alla Skärmar och Privilegier",
   "All Privileges": "Alla Privilegier",
   "All Warnings": "Alla Varningar",
-  "All streams in first feed": "Alla bäckar i första foder",
+  "All streams in first feed": "Alla streams i första flödet",
   "Allow Next Command": "Ge Nästa Kommando <small>i Minuter</small>",
-  "Allow Next Discord Alert": "Låt Nästa Oenighet Alert <small>i Minuter</small>",
+  "Allow Next Discord Alert": "Låt Nästa Discord Alert <small>i Minuter</small>",
   "Allow Next Email": "Tillåter att Nästa E-post <small>inom några Minuter</small>",
   "Allow Next Trigger": "Låt Nästa Trigger <small>i Millisekunder</small>",
   "Allowed IPs": "Tillåtna IPs",
@@ -55,8 +55,8 @@
   "Audio Codec": "Ljud-Codec",
   "Audio Detection": "Ljud Upptäckt",
   "Audio Detector": "Ljud Detektor",
-  "Audio stream only from first feed": "Ljud endast från första foder",
-  "Audio streams only": "Ljudströmmar bara",
+  "Audio stream only from first feed": "Ljud endast från första flödet",
+  "Audio streams only": "Ljud stream endast",
   "Authenticate": "Verifiera",
   "Authentication Failed": "Autentisering Misslyckades",
   "Auto": "Auto",
@@ -193,10 +193,10 @@
   "Delete Selected Videos": "Ta Bort Valda Videor",
   "Delete Video": "Ta Bort Video",
   "Delete selected": "Radera utvalda",
-  "DeleteMonitorText": "Vill du ta bort denna bildskärm? Du kan inte kräva det. Du kan välja filer att stanna kvar i filsystemet. Om du väljer att återskapa en skärm med samma ID-videor och händelser som kommer att bli synliga i översikten.",
+  "DeleteMonitorText": "Vill du ta bort denna bildskärm? Du kan inte återställa den. Du kan välja filer att stanna kvar i filsystemet. Om du väljer att återskapa en skärm med samma ID-videor och händelser som kommer att bli synliga i översikten.",
   "DeleteMonitorsText": "Vill du ta bort dessa skärmar? Du kan inte återställa dem. Du kan välja att behålla filerna för dessa Id: n i filsystemet. Om du väljer att återskapa en bildskärm med en av de IDs videor och händelser som kommer att bli synliga i översikten.",
   "DeleteSelectedVideosMsg": "Vill du ta bort dessa filmer? Du kan inte återställa dem.",
-  "DeleteVideoMsg": "Vill du ta bort denna video? Du kan inte kräva det.",
+  "DeleteVideoMsg": "Vill du ta bort denna video? Du kan inte återställa den.",
   "Deleted": "Bort",
   "Deleted Schedule Configuration": "Utgå Schema Konfiguration",
   "Deleted State Configuration": "Borttaget Konfiguration",
@@ -281,8 +281,8 @@
   "Fatal": "Dödlig utgång",
   "Fatal Maximum Reached": "Dödlig Max Har Nåtts, Stoppa Kameran.",
   "FatalMaximumReachedText": "JPEG Fel var dödlig.",
-  "Feed-in Image Height": "Feed-in Bildens Höjd",
-  "Feed-in Image Width": "Feed-in Bildens Bredd",
+  "Feed-in Image Height": "Feed-in Bild Höjd",
+  "Feed-in Image Width": "Feed-in Bild Bredd",
   "Female": "Kvinna",
   "Fields cannot be empty": "Fält får inte vara tomt",
   "File Delete Error": "Ta Bort Fel Fil",
@@ -304,7 +304,7 @@
   "Filters Updated": "Filter Uppdaterade",
   "FiltersUpdatedText": "Dina ändringar har sparats och tillämpas.",
   "Find Where": "Hitta Där",
-  "First stream in feed": "Första stream i foder",
+  "First stream in feed": "Första stream i flödet",
   "Fix": "Fixa",
   "Fix Video": "Fixa Video",
   "FixVideoMsg": "Vill du fixa denna video? Du kan inte ångra den här åtgärden.",
@@ -351,7 +351,7 @@
   "Hide Notes": "Dölj Anteckningar",
   "Host": "Värd",
   "Host Type": "Värd Typ",
-  "Hotswap Modes (Watch-Only)": "Hotswap Lägen (Titta Bara)",
+  "Hotswap Modes (Watch-Only)": "Hotswap Lägen (Titta Endast)",
   "How to Record": "Hur att Spela in",
   "IP Address": "IP-Adress",
   "Identity": "Identitet",
@@ -370,7 +370,7 @@
   "Incorrect Settings Chosen": "Felaktiga Inställningar Valt",
   "Indifference": "Likgiltighet",
   "Input": "Ingång",
-  "Input Feed": "Ingång Foder",
+  "Input Feed": "Inmatningsflöde",
   "Input Flags": "Ingång Flaggor",
   "Input Selector": "Input Selector",
   "Input Settings": "Inmata Inställningar",
@@ -411,7 +411,7 @@
   "Live View": "Live View",
   "Local": "Lokala",
   "Log Level": "Logga Nivå",
-  "Log Signal Event": "Logga Signal Händelse <small>Klienten bara</small>",
+  "Log Signal Event": "Logga Signal Händelse <small>Endast Klienten</small>",
   "Log Stream": "Logga Ström",
   "Logging": "Loggning",
   "Login": "Logga in",
@@ -456,7 +456,7 @@
   "Monitor is now Disabled": "Monitor är nu Inaktiverad",
   "Monitor is now Idle": "Monitor är nu Inaktiv",
   "Monitor is now Recording": "Monitor är nu Inspelning",
-  "Monitor is now Watching": "Bildskärmen är nu som att Titta på",
+  "Monitor is now Watching": "Monitor är nu Titta på",
   "Monitor mode changed": "Övervaka läget förändrats",
   "Monitor mode is already": "Övervaka läget är redan",
   "Monitor or Key does not exist.": "Övervaka eller Nyckeln inte finns.",
@@ -637,12 +637,12 @@
   "Search Base": "Sök Bas",
   "Search Filter": "Sök Filter",
   "Search Images": "Sök Bilder",
-  "Second stream in feed": "Andra stream i foder",
+  "Second stream in feed": "Andra stream i flödet",
   "Secure": "Säker",
   "Send Frames": "Skicka Bilder <small>Push ramar som skall analyseras</small>",
   "Separate with commas, no spaces": "Separera med kommatecken, utan blanksteg",
   "Server URL": "Server-URL",
-  "Set to Watch Only": "För att Titta på Bara",
+  "Set to Watch Only": "För att Titta på Endast",
   "Settings": "Inställningar",
   "Settings Changed": "Inställningar Som Har Ändrats",
   "SettingsChangedText": "Dina inställningar har sparats och tillämpas. Inställningar inställningar vissa inställningar kan kräva en uppdatering av denna sida.",
@@ -720,30 +720,30 @@
   "Token": "Token",
   "Top Left": "Överst Till Vänster",
   "Top Right": "Överst Till Höger",
-  "Traditional (Watch-Only, Includes Buffer)": "Traditionella (Titta Bara, Har Buffert)",
+  "Traditional (Watch-Only, Includes Buffer)": "Traditionella (Titta Endast, Har Buffert)",
   "Traditional Recording": "Traditionell Inspelning",
   "Traditional Recording Flags": "Traditionell Inspelning Flaggor",
   "Train": "Tåg",
   "TrainConfirm": "Är du säker på att du vill börja träna? Detta kan ta mer än 12 timmar med över 500 bilder. Detta kommer att konsumera en stor mängd resurser, som RAM-minne och/eller CPU.",
   "TrainConfirmStop": "Är du säker på att du vill sluta träna?",
   "Trainer Engine": "Tränare Motor",
-  "Trigger Camera Groups": "Utlösa Kameran Grupper",
-  "Trigger Group to Record": "Trigger Gruppen att Spela in",
-  "Trigger Record": "Trigger-Post",
-  "Trigger Successful": "Trigger Framgångsrik",
-  "Trigger Threshold": "Trigger Tröskeln",
+  "Trigger Camera Groups": "Trigger Kamera Grupper",
+  "Trigger Group to Record": "Trigger Grupp att Spela in",
+  "Trigger Record": "Trigger Spela in",
+  "Trigger Successful": "Trigger Lyckad",
+  "Trigger Threshold": "Trigger Tröskel",
   "UDP": "UDP",
   "URL": "URL",
-  "URL Stop Timeout": "URL Sluta Timeout <small>Run / stop URL: en efter X millisekunder</small>",
+  "URL Stop Timeout": "URL stop Timeout <small>Stoppa URL:en efter X millisekunder</small>",
   "US": "OSS",
   "Unable to Launch": "Det gick inte att Starta",
-  "UnabletoLaunchText": "Vänligen spara ny skärm först. Sedan försöket att lansera regionen redaktör.",
+  "UnabletoLaunchText": "Vänligen spara ny skärm först. Försök sedan att starta region editor.",
   "Uniform": "Uniform",
   "Up": "Upp <small>URL-Adressen,</small>",
   "Up Stop": "Sluta upp <small>URL-Adressen,</small>",
   "Update": "Uppdatering",
-  "Update to Development": "Uppdatera till Utveckling",
-  "Update to Master": "Uppdatera för att Bemästra",
+  "Update to Development": "Uppdatera till Development",
+  "Update to Master": "Uppdatera till Master",
   "Upload File": "Ladda Upp Fil",
   "Uploaders": "Uploaders",
   "Use Built-In": "Använd Inbyggda",
@@ -752,9 +752,9 @@
   "Use Global Wasabi Hot Cloud Storage Video Storage": "Använd Globala Wasabi Heta Moln Lagring Lagring Video",
   "Use Global WebDAV Video Storage": "Använd Globala WebDAV-Video Lagring",
   "Use HTML5 Play Method": "Använd HTML5 Play-Metoden",
-  "Use Max Storage Amount": "Använda Max Lagring Belopp",
+  "Use Max Storage Amount": "Använd Max Lagringsutrymme",
   "Use coProcessor": "Använd coProcessor",
-  "User Not Found": "Användare Som Inte Finns",
+  "User Not Found": "Användare Inte Finns",
   "Username": "Användarnamn",
   "VA-API": "VA-API",
   "Value": "Värde",
@@ -763,25 +763,25 @@
   "Video Codec": "Video-Codec",
   "Video Filter": "Video Filter",
   "Video Finished": "Video Klar",
-  "Video Length (minutes) and Motion Count per video": "Video Längd (minuter) och Rörelse Räknas per video",
+  "Video Length (minutes) and Motion Count per video": "Video Längd (minuter) och Rörelse Antal per video",
   "Video Limit": "Video Gräns",
-  "Video Record Rate": "Videoinspelning Priser <small>(FPS)</small>",
+  "Video Record Rate": "Videoinspelning hastighet <small>(FPS)</small>",
   "Video Set": "Video Set",
   "Video Share": "Video Dela",
   "Video Status": "Video Status",
   "Video and Time Span (Minutes)": "Video och Tid (Minuter)",
-  "Video stream only from first feed": "Video stream endast från första foder",
-  "Video streams only": "Video strömmar bara",
+  "Video stream only from first feed": "Video stream endast från första flödet",
+  "Video streams only": "Video stream endast",
   "Videos": "Videoklipp",
   "Videos List": "Videor Lista",
   "Videos Merge": "Videor Samman",
   "Warning": "Varning",
-  "Wasabi Hot Cloud Storage": "Wasabi Heta Moln Lagring",
-  "Wasabi Hot Cloud Storage Upload Error": "Wasabi Heta Moln Lagring Ladda Upp Fel",
+  "Wasabi Hot Cloud Storage": "Wasabi Hot Cloud Storage",
+  "Wasabi Hot Cloud Storage Upload Error": "Wasabi Hot Cloud Storage Uppladdnings Fel",
   "Watch": "Titta på",
-  "Watch Only": "Titta Bara",
-  "Watch-Only": "Titta Bara",
-  "Watching": "Att titta på",
+  "Watch Only": "Titta Endast",
+  "Watch-Only": "Titta Endast",
+  "Watching": "Tittar på",
   "Web Page": "Webbsida",
   "WebDAV": "WebDAV",
   "WebM (libvpx)": "WebM (libvpx)",
@@ -791,7 +791,7 @@
   "Webhook": "Webhook",
   "Webhook URL": "Webhook URL",
   "Websocket": "Websocket",
-  "Websocket Connected": "Websocket Som Är Ansluten",
+  "Websocket Connected": "Websocket Ansluten",
   "Websocket Disconnected": "Websocket Frånkopplad",
   "Width": "Bredd",
   "X Point": "X-Punkt",
@@ -799,9 +799,9 @@
   "Yes": "Ja",
   "Zip and Download": "Zip och Ladda ner",
   "Zoom In": "Zooma In <small>URL-Adress</small>",
-  "Zoom In Stop": "Zooma In Stop <small>URL-Adress</small>",
+  "Zoom In Stop": "Zooma In Stopp <small>URL-Adress</small>",
   "Zoom Out": "Zooma Ut <small>URL-Adress</small>",
-  "Zoom Out Stop": "Zooma Ut för att Stoppa <small>URL-Adress</small>",
+  "Zoom Out Stop": "Zooma Ut Stopp <small>URL-Adress</small>",
   "a day": "en dag",
   "a few seconds": "några sekunder",
   "a minute": "en minut",
@@ -813,25 +813,25 @@
   "accountId": "Konto-ID",
   "ago": "sedan",
   "an hour": "en timme",
-  "applicationKey": "Ansökan Nyckel",
+  "applicationKey": "Applikationsnyckel",
   "aws_accessKeyId": "Tillgång Till Nyckel-Id",
   "aws_secretAccessKey": "Hemlig Nyckel",
   "bindDN": "bindDN",
-  "blankPassword": "Lämna tomt för att hålla samma lösenord",
-  "clientStreamFailedattemptingReconnect": "Klienten ctream postkontroll misslyckades, försök ansluta igen.",
+  "blankPassword": "Lämna tomt för att behålla samma lösenord",
+  "clientStreamFailedattemptingReconnect": "Klient ctream kontroll misslyckades, försök ansluta igen.",
   "coProcess Crashed for Monitor": "coProcess Kraschat för Bildskärm",
-  "coProcess Unexpected Exit": "coProcess Oväntad Utgång",
+  "coProcess Unexpected Exit": "coProcess Avslutades Oväntat",
   "coProcessor": "coProcessor",
   "coProcessor Started": "coProcessor Igång",
   "coProcessor Stopped": "coProcessor Stoppas",
-  "coProcessorTextStarted": "coProcessor har börjat för CPU bara utgångar.",
-  "coProcessorTextStopped": "coProcessor har upphört.",
-  "confirmDeleteFilter": "Vill du ta bort detta filter? Du kan inte kräva det.",
+  "coProcessorTextStarted": "coProcessor startades för endast CPU utgångar.",
+  "coProcessorTextStopped": "coProcessor har stoppats.",
+  "confirmDeleteFilter": "Vill du ta bort detta filter? Du kan inte återställa det.",
   "copy": "kopiera",
   "cuvid": "cuvid (NVIDIA NVENC)",
   "days": "dagar",
-  "deleteMonitorStateText1": "Vill du ta bort denna Monitor Preset?",
-  "deleteMonitorStateText2": "Vill du ta bort denna Monitor är Förinställd?",
+  "deleteMonitorStateText1": "Vill du ta bort denna Monitor State Preset?",
+  "deleteMonitorStateText2": "Vill du ta bort denna Monitorns Förinställing?",
   "drm": "DRM-objekt dela",
   "dropBoxSuccess": "Framgång! Filer som sparas i din Dropbox.",
   "dxva2": "dxva2 (DirectX Video, Windows)",
@@ -839,17 +839,17 @@
   "failedLoginText2": "Vänligen kontrollera dina inloggningsuppgifter.",
   "flv": "flv",
   "for Global Access": "för Global Tillgång",
-  "h264_cuvid": "H. 264 CUVID",
-  "h264_mmal": "H. 264 (Raspberry Pi)",
-  "h264_nvenc": "H. 264 NVENC (NVIDIA HW Accel)",
-  "h264_omx": "H. 264 openMAX (Raspberry Pi)",
-  "h264_qsv": "H. 264 (Quick Sync Video)",
-  "h264_vaapi": "H. 264 VA-API (Intel HW Accel)",
-  "h265BrowserText1": "Om du försöker spela upp en H. 265 fil, kan du behöva ladda ner den och öppna den i ett annat program som VLC.",
-  "hevc_cuvid": "H. 265 CUVID",
-  "hevc_nvenc": "H. 265 NVENC (NVIDIA HW Accel)",
-  "hevc_qsv": "H. 265 (Quick Sync Video)",
-  "hevc_vaapi": "H. 265 VA-API (Intel HW Accel)",
+  "h264_cuvid": "H.264 CUVID",
+  "h264_mmal": "H.264 (Raspberry Pi)",
+  "h264_nvenc": "H.264 NVENC (NVIDIA HW Accel)",
+  "h264_omx": "H.264 openMAX (Raspberry Pi)",
+  "h264_qsv": "H.264 (Quick Sync Video)",
+  "h264_vaapi": "H.264 VA-API (Intel HW Accel)",
+  "h265BrowserText1": "Om du försöker spela upp en H.265 fil, kan du behöva ladda ner den och öppna den i ett annat program som VLC.",
+  "hevc_cuvid": "H.265 CUVID",
+  "hevc_nvenc": "H.265 NVENC (NVIDIA HW Accel)",
+  "hevc_qsv": "H.265 (Quick Sync Video)",
+  "hevc_vaapi": "H.265 VA-API (Intel HW Accel)",
   "hours": "timmar",
   "hwaccel": "Acceleration Motor",
   "hwaccel_device": "HWAccel Enhet",
@@ -871,9 +871,9 @@
   "modifyVideoText1": "Metoden inte existerar. Kontrollera att det sista värdet av URL: en är inte tom.",
   "monSavedButNotCopied": "Din skärm har sparats men inte kopieras till en annan monitor.",
   "monitorEditFailedMaxReached": "Ditt konto har uppnått den maximala antal kameror som kan skapas. Tala till en administratör om du vill att detta ändras.",
-  "monitorEditText1": "Ogiltiga Data, Kontrollera för att se att detta är en giltig import sträng.",
-  "monitorEditText2": "Ogiltig Information Sträng. Kontrollera för att se att det är en JSON-sträng och inte en vanlig objekt som gått.",
-  "monitorGetText1": "ofullständig ansökan, ta bort sista snedstreck i URL-adressen eller sätta acceptabelt värde.",
+  "monitorEditText1": "Ogiltig Data, Kontrollera för att se att detta är en giltig import sträng.",
+  "monitorEditText2": "Ogiltig Information Sträng. Kontrollera för att se att det är en JSON-sträng och inte en vanlig objekt som skickas.",
+  "monitorGetText1": "ofullständig begäran, ta bort sista snedstrecket i URL eller lägg till acceptabelt värde.",
   "months": "månader",
   "mpeg2_mmal": "MPEG-2 (Raspberry Pi)",
   "mpeg2_qsv": "MPEG2 (Quick Sync Video)",
@@ -882,13 +882,13 @@
   "noSpecialCharacters": "Inga mellanslag eller specialtecken.",
   "notPermitted1": "Denna åtgärd är inte tillåtet av administratören för ditt konto.'",
   "on": "på",
-  "on Error": "om Fel",
+  "on Error": "på Fel",
   "openImagesDownloadConfirm": "Är du säker på att du vill börja ladda ner bilder och bounding boxes (preset Matriser) från OpenImages?",
   "openImagesDownloadConfirmStop": "Är du säker på att du vill sluta träna?",
   "opencvCascadesText": "Om du ser något här sedan är det bara att hämta paketet på <a href=\"https://cdn.shinobi.video/weights/cascades.zip\">cascades</a>. Släpp dem i <code>plugins/opencv/kaskader</code> tryck sedan på uppdatera <i class=\"fa fa-retweet\"></i>.",
   "possibleInternalError": "Möjligt Internt Fel",
   "postDataBroken": "Kontrollera formatet JSON. Se till att den är sträng och definieras under \"uppgifter\"",
-  "powerVideoEventLimit": "Du har satt en hög händelse gräns. Är du säker på att du vill göra denna begäran?",
+  "powerVideoEventLimit": "Du har satt en hög gräns för händelser. Är du säker på att du vill göra denna begäran?",
   "privateKey": "Privat Nyckel",
   "qsv": "qsv",
   "sizePurgeLockedText": "Storlek Rensa Lås (deleteOverMax) verkar ha misslyckats att låsa upp. Låsa upp nu...",
@@ -900,7 +900,7 @@
   "startUpText4": "Börjar Skärmar... Var God Vänta...",
   "startUpText5": "Shinobi är redo.",
   "startUpText6": "Föräldralösa Videor som Finns och Sätts in",
-  "superAdminText": "\"super.json\" existerar inte. Vänligen byt namn \"super.prov.json\" till en \"super -.json\".",
+  "superAdminText": "\"super.json\" existerar inte. Vänligen byt namn \"super.smple.json\" till \"super.json\".",
   "total": "totalt",
   "updateKeyText1": "\"updateKey\" saknas \"conf.json\", kan inte göra uppdateringar på detta sätt tills du lägger till den.",
   "updateKeyText2": "\"updateKey\" är felaktig.",
