--- a/languages/sv_SE.json
+++ b/languages/sv_SE.json
@@ -26,6 +26,7 @@
   "Add Map": "Lägg Till Karta",
   "Add Monitor": "Lägg Till Kamera",
   "Add New": "Lägg Till Ny",
+  "Add Account": "Lägg till Konto",
   "Admin": "Admin",
   "Advanced": "Avancerad",
   "Again": "Igen",
@@ -141,6 +142,7 @@
   "Connection timed out": "Anslutningen har avbrutits",
   "Contains": "Innehåller",
   "Control": "Kontroll",
+  "Controls and Logs": "Kontroller och loggar",
   "Control Error": "Kontroll Fel",
   "ControlErrorText1": "Kontroll är inte aktiverat",
   "ControlErrorText2": "Kontrollera dina anslutnings detaljer. Du kan behöva peka Bas-URL på port 8000 eller 80. Kontrollera din autentisering info.",
@@ -351,7 +353,7 @@
   "Hide Notes": "Dölj Anteckningar",
   "Host": "Värd",
   "Host Type": "Värd Typ",
-  "Hotswap Modes (Watch-Only)": "Hotswap Lägen (Titta Bara)",
+  "Hotswap Modes (Watch-Only)": "Hotswap Lägen (Titta Endast)",
   "How to Record": "Hur att Spela in",
   "IP Address": "IP-Adress",
   "Identity": "Identitet",
@@ -516,8 +518,8 @@
   "ONVIF Port": "ONVIF-Port",
   "ONVIF Scanner": "ONVIF-Scanner",
   "ONVIFEventsNotAvailable": "ONVIF Händelser som inte Tillgängligt",
-  "ONVIFnotCompliantProfileT": "Kameran är inte ONVIF-Profil T-Kompatibla",
-  "ONVIFnote": "Upptäck ONVIF-enheter i nätverk utanför din egen eller lämna det tomt för att skanna ditt nuvarande nätverk. <br>Användarnamn och Lösenord kan lämnas tomt.",
+  "ONVIFnotCompliantProfileT": "Kameran är inte ONVIF Kompatibel",
+  "ONVIFnote": "Upptäck ONVIF enheter i nätverk utanför din egen eller lämna det tomt för att skanna ditt nuvarande nätverk. <br>Användarnamn och Lösenord kan lämnas tomt.",
   "OR": "ELLER",
   "Object": "Objekt",
   "Object Detection": "Object Detection",
@@ -677,7 +679,7 @@
   "Stop": "Stopp",
   "Stop Command": "Stopp Kommando",
   "Stop URL": "Stopp URL",
-  "Stopped": "Stoppat",
+  "Stopped": "Stoppad",
   "Storage Location": "Lagringsplats",
   "Stream": "Stream",
   "Stream Channel": "Stream Kanal",
@@ -891,16 +893,16 @@
   "powerVideoEventLimit": "Du har satt en hög händelse gräns. Är du säker på att du vill göra denna begäran?",
   "privateKey": "Privat Nyckel",
   "qsv": "qsv",
-  "sizePurgeLockedText": "Storlek Rensa Lås (deleteOverMax) verkar ha misslyckats att låsa upp. Låsa upp nu...",
-  "skipPingText1": "Försök att \"Hoppa över Ping\" till Ja.",
+  "sizePurgeLockedText": "The Size Purge Lock (deleteOverMax) verkar ha misslyckats att låsa upp. Låser upp nu...",
+  "skipPingText1": "Prova att sätta \"Hoppa över Ping\" till Ja.",
   "startUpText0": "Kontroll Av Disk Som Används..",
   "startUpText1": "Klar Att Kontrollera Hårddisken Som Används.",
   "startUpText2": "alla användare kontrolleras, vänta med att stänga öppna filer och ta bort filer över gränsen för antal användare",
-  "startUpText3": "väntar på att ge oavslutade video in lite tid. 3 sekunder.",
+  "startUpText3": "väntar, ger oavslutade video lite mer tid. 3 sekunder.",
   "startUpText4": "Startar Kameror... Var God Vänta...",
   "startUpText5": "Shinobi är redo.",
-  "startUpText6": "Föräldralösa Videor som Finns och Sätts in",
-  "superAdminText": "\"super.json\" existerar inte. Vänligen byt namn \"super.prov.json\" till en \"super -.json\".",
+  "startUpText6": "Föräldralösa Videor hittade och infogade",
+  "superAdminText": "\"super.json\" existerar inte. Vänligen byt namn \"super.sample.json\" till en \"super.json\".",
   "total": "totalt",
   "updateKeyText1": "\"updateKey\" saknas \"conf.json\", kan inte göra uppdateringar på detta sätt tills du lägger till den.",
   "updateKeyText2": "\"updateKey\" är felaktig.",
@@ -911,5 +913,7 @@
   "vp8_cuvid": "VP8 NVENC (NVIDIA HW Accel)",
   "vp8_qsv": "VP8 (Quick Sync Video)",
   "vp9_cuvid": "VP9 NVENC (NVIDIA HW Accel)",
-  "years": "år"
+  "years": "år",
+  "Clear Logs": "Rensa Logg",
+  "Logout": "Logga ut"
 }
