--- a/languages/sv_SE.json
+++ b/languages/sv_SE.json
@@ -38,10 +38,10 @@
   "All Monitors and Privileges": "Alla Kameror och Privilegier",
   "All Privileges": "Alla Privilegier",
   "All Warnings": "Alla Varningar",
-  "All streams in first feed": "Alla stömmar i första flödet",
+  "All streams in first feed": "Alla streams i första flödet",
   "Allow Next Command": "Ge Nästa Kommando <small>i Minuter</small>",
-  "Allow Next Discord Alert": "Låt Nästa Oenighet Alert <small>i Minuter</small>",
-  "Allow Next Email": "Tillåter att Nästa E-post <small>inom några Minuter</small>",
+  "Allow Next Discord Alert": "Låt Nästa Discord Alert <small>i Minuter</small>",
+  "Allow Next Email": "Tillåter Nästa E-post <small>inom några Minuter</small>",
   "Allow Next Trigger": "Låt Nästa Trigger <small>i Millisekunder</small>",
   "Allowed IPs": "Tillåtna IPs",
   "Already exists": "Finns redan",
