--- a/languages/sv_SE.json
+++ b/languages/sv_SE.json
@@ -557,10 +557,10 @@
   "Primary Input": "Primary Input",
   "Privileges": "Privilegier",
   "Probe Size": "Sonden Storlek",
-  "Process Already Running": "Processen Redan Igång",
-  "Process Crashed for Monitor": "Processen Kraschat för Kamera",
+  "Process Already Running": "Processen är Redan Igång",
+  "Process Crashed for Monitor": "Processen har Kraschat för Kamera",
   "Process Not Running": "Processen Att Inte Köra",
-  "Process Started": "Processen Började",
+  "Process Started": "Processen Startade",
   "Process Unexpected Exit": "Processen Oväntad Utgång",
   "Processor": "Processor",
   "Profile": "Profil",
